[gd_scene load_steps=18 format=1]

[ext_resource path="res://scripts/Manu.gd" type="Script" id=1]
[ext_resource path="res://assets/classic/font/nokiafc22.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/classic/sprites/yellow_sliderLeft.png" type="Texture" id=3]
[ext_resource path="res://assets/classic/sprites/yellow_sliderRight.png" type="Texture" id=4]
[ext_resource path="res://assets/classic/sprites/yellow_button00.png" type="Texture" id=5]
[ext_resource path="res://assets/classic/sprites/yellow_button01.png" type="Texture" id=6]
[ext_resource path="res://assets/classic/sprites/button_setting.png" type="Texture" id=7]
[ext_resource path="res://assets/classic/sprites/button_setting_hover.png" type="Texture" id=8]
[ext_resource path="res://assets/classic/sprites/button_about.png" type="Texture" id=9]
[ext_resource path="res://assets/classic/sprites/button_about_hover.png" type="Texture" id=10]
[ext_resource path="res://assets/classic/sprites/button_no or close.png" type="Texture" id=11]
[ext_resource path="res://assets/classic/sprites/button_no or close_hover.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]

font/size = 100
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 82
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

font/size = 28
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]

font/size = 68
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[node name="Menu" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Game" type="Node2D" parent="."]

transform/pos = Vector2( 360, 800 )

[node name="Logo" type="Node2D" parent="."]

editor/display_folded = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Logo" type="Label" parent="Logo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 50.0
margin/right = 720.0
margin/bottom = 175.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "TAP PLANE"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Stage" type="Label" parent="Logo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 200.0
margin/right = 720.0
margin/bottom = 325.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "STAGE"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Description" type="Label" parent="Logo"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 0.0
margin/top = 350.0
margin/right = -656.0
margin/bottom = -373.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "DESCRIPTION THE STAGE HERE"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = 2

[node name="Version" type="Label" parent="Logo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 542.0
margin/top = 0.0
margin/right = 720.0
margin/bottom = 40.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "version"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btn_left" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 0, 640 )
transform/scale = Vector2( 3, 3 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="btn_right" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 603, 640 )
transform/scale = Vector2( 3, 3 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="BtnPlay" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 170, 950 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="btn_play" type="TouchScreenButton" parent="BtnPlay"]

transform/scale = Vector2( 2, 2 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Play" type="Label" parent="BtnPlay"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 374.0
margin/bottom = 91.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "PLAY"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BtnSettings" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 600, 960 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="btn_settings" type="TouchScreenButton" parent="BtnSettings"]

transform/scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 7 )
pressed = ExtResource( 8 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="BtnInfo" type="Node2D" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 650, 1000 )
__meta__ = {
"_edit_group_": true
}

[node name="btn_settings" type="TouchScreenButton" parent="BtnInfo"]

transform/scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 9 )
pressed = ExtResource( 10 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="BtnClose" type="Node2D" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 650, 1190 )
__meta__ = {
"_edit_group_": true
}

[node name="btn_settings" type="TouchScreenButton" parent="BtnClose"]

transform/scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 11 )
pressed = ExtResource( 12 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[connection signal="pressed" from="btn_left" to="." method="_on_btn_left_pressed"]

[connection signal="pressed" from="btn_right" to="." method="_on_btn_right_pressed"]

[connection signal="pressed" from="BtnPlay/btn_play" to="." method="_on_btn_play_pressed"]

[connection signal="pressed" from="BtnSettings/btn_settings" to="." method="_on_btn_settings_pressed"]


